Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -686,7 +686,7 @@
     }
    ],
    "source": [
-    "jerry = tv_shows[1]['creator']\n",
+    "jerry = tv_shows[1]['creators'][1]\n",
     "\n"
    ]
   },
